# learning_llms_through_cpp

./: .gitignore  CMakeLists.txt
learning_c/: llmvector.cpp  llmvector.h  llmvectortests.cpp  llmvectortests.h  main  main.cpp
learning_c.xcodeproj/: project.pbxproj
learning_c.xcodeproj/xcshareddata/xcschemes/: learning_c.xcscheme
learning_c.xcodeproj/xcuserdata/anasali.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
learning_c.xcodeproj/xcuserdata/anasali.xcuserdatad/xcschemes/: xcschememanagement.plist
project1-llmvector/: CMakeLists.txt
project1-llmvector/examples/: CMakeLists.txt  main.cpp
project1-llmvector/include/project1/: llmvector.h
project1-llmvector/tests/: CMakeLists.txt  llmvector_tests.cpp
project2-token-processing/: CMakeLists.txt  README.md
project2-token-processing/examples/: CMakeLists.txt  main.cpp
project2-token-processing/include/token_processing/: bpe.h  tokenizer.h
project2-token-processing/src/: bpe.cpp
project3-multithreaded-tokens-processing/: CMakeLists.txt
project3-multithreaded-tokens-processing/examples/: CMakeLists.txt  main.cpp
project3-multithreaded-tokens-processing/include/token_processing/: llminferenceengine.h  tsq.h
project3-multithreaded-tokens-processing/src/: llminferenceengine.cpp
